# option-pricer

./: '  .gitignore  Makefile  README.md  pyproject.toml
quantoptions/pricing_models/: binomial_tree.py  black_scholes.py
src/bspx/: __init__.py  __main__.py  constants.py  numeric_utils.py  paths.py  types.py
src/bspx/greeks/: __init__.py  analytical.py  numerical.py
src/bspx/greeks/formulas/: analytical.py  numerical.py
src/bspx/indicators/: __init__.py  bollinger.py  moving_average.py  rsi.py
src/bspx/instruments/: __init__.py  option.py
src/bspx/market_data/: __init__.py  fetch.py
src/bspx/pricing/: __init__.py  black_scholes_model.py  forwards.py
src/bspx/utils/: constants.py
src/bspx/visualizations/: __init__.py  charts.py
src/bspx/volatility/: __init__.py  historical_volatility.py  implied_volatility.py
tests/: cases.py  conftest.py  constants.py  hypothesis_strategies.py  test_black_scholes.py
tests/greeks/: test_analytical.py  test_numerical.py
tests/pricing/: test_black_scholes_model.py
tests/volatility/: test_implied_volatility.py
