[project]
name = "bspx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hypothesis>=6.151.9",
    "numpy>=2.4.2",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "setuptools>=82.0.0",
    "yfinance>=1.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "__pycache__",
]
markers=[
    "slow: mark tests as slow (deselect with '-m \"not slow\"')",
]
