[project]
name = "bspx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "setuptools>=82.0.0",
    "yfinance>=1.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = ["tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
strictListInference = true
strictDictionaryInference = true

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (auto-sort imports)
    "B",    # flake8-bugbear (catches design smells)
    "UP",   # pyupgrade (keeps syntax modern for 3.12)
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules (highly recommended for you)
    "PT",   # Pytest-style rules
    "SIM",  # flake8-simplify (suggests cleaner code)
]
ignore = [
    "E501", # Line length (already handled by the formatter)
    "N803", # Argument name should be lowercase (Allow 'S', 'K' for options math)
    "N806", # Variable name should be lowercase (Allow 'S', 'K' inside functions)
]

[tool.ruff.lint.isort]
known-first-party = ["bspx"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "__pycache__",
]
markers=[
    "slow: mark tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pandas-stubs>=3.0.0.260204",
]
