[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quantoptions"
version = "0.1.0"
description = "Python library for options pricing and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.1",
    "jaxlib>=0.9.1",
]

[pyproject.optional-dependencies]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
packages = ["quantoptions"]

# -------------------- LSP Config --------------------

[tool.pyright]
include = ["quantoptions", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportUnusedImport = true
reportUnusedVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
strictListInference = true
strictDictionaryInference = true

# -------------------- Formatter Config --------------------

[tool.ruff]
src = ["quantoptions"]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------- Linter Config --------------------

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (auto-sort imports)
    "B",    # flake8-bugbear (catches design smells)
    "UP",   # pyupgrade (keeps syntax modern for 3.12)
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules (highly recommended for you)
    "PT",   # Pytest-style rules
    "SIM",  # flake8-simplify (suggests cleaner code)
]
ignore = [
    "E501", # Line length (already handled by the formatter)
    "N803", # Argument name should be lowercase (Allow 'S', 'K' for math)
    "N806", # Variable name should be lowercase (Allow 'S', 'K' in functions)
]

[tool.ruff.lint.isort]
known-first-party = ["quantoptions"]
